--- a/StarFleetManager/StarFleetManager.Client/Components/Table.razor
+++ b/StarFleetManager/StarFleetManager.Client/Components/Table.razor
@@ -3,22 +3,22 @@
 
 @inject AuthenticationStateProvider AuthStateProvider
 
-<div class="table-responsive">
-    <div class="container-md my-1">
-        <div class="row justify-content-start">
-            <div class="col-sm-4">
-                <input id="table-filter" name="table-filter" class="form-control m-1" @bind="_enteredFilter" @oninput="UpdateTableFilter" placeholder="Search your Fleet..." style="width: 20rem;" />
-                <div class="form-text mx-1" id="basic-addon4">Filters by Name, Model, Manufacturer or Class</div>
-            </div>
+<div class="container-md my-1">
+    <div class="row justify-content-start">
+        <div class="col-sm-4">
+            <input id="table-filter" name="table-filter" class="form-control m-1" @bind="_enteredFilter" @oninput="UpdateTableFilter" placeholder="Search your Fleet..." style="width: 20rem;" />
+            <div class="form-text mx-1" id="basic-addon4">Filters by Name, Model, Manufacturer or Class</div>
         </div>
     </div>
-    
+</div>
+
+<div class="table-responsive">
     
     <table class="table table-sm">
         <thead>
             <tr>
                 <th scope="col">
-                    <button class="btn btn-outline-warning btn-sm my-1" hidden="@(!isLoggedIn)" data-bs-toggle="modal" data-bs-target="#editModal" title="Refill the database">
+                    <button class="btn btn-outline-warning btn-sm my-1" hidden="@(!isLoggedIn)" title="Seed the database" @onclick="RefillDb">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z" />
                             <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466" />
